Center-align/apply col-9, align avoiding_viruses.html source file
The primary exception are the class-major span-headers, which were
clearly made to be col-12.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -387,6 +387,15 @@ input, select, textarea {
 			width: 75%;
 		}
 
+		/* NOTE(Chris): I've added this to center specific columns */
+		.col-center {
+			margin: auto;
+		}
+
+		.col-9-custom {
+			width: 75%;
+		}
+
 		.row > .off-9 {
 			margin-left: 75%;
 		}
